<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/list_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/list_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/list_subtitle"
        android:textAlignment="center"
        android:textColor="@color/main_subtitle_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list_dropdown"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <ImageView
                    android:id="@+id/list_img"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onImageClick"
                    app:srcCompat="@drawable/img_1" />

                <TextView
                    android:id="@+id/list_img_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="5dp"
                    android:text="@string/list_img_text"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/list_btn_to_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:onClick="goToMain"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/list_btn_to_main"
                    app:iconPadding="0dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>